// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders a default button 1`] = `
<div>
  <button
    class="sc-braxZu wJQOW"
  />
</div>
`;

exports[`renders a primary button 1`] = `
<div>
  <button
    class="sc-braxZu sc-gJhJTp wJQOW dcSjso"
  >
    Label
  </button>
</div>
`;
